# myspace

./: CMakeLists.txt  README.md  output.txt
libs/: CMakeLists.txt
libs/utils/: CMakeLists.txt  assert.h  exceptions.h  make_string.h  strings.cpp  strings.h  utils.h
libs/utils/ut/: CMakeLists.txt  assert_ut.cpp  exceptions_ut.cpp  make_string_ut.cpp  strings_ut.cpp
phase_analysis/: CMakeLists.txt  README.md
phase_analysis/apps/: CMakeLists.txt
phase_analysis/apps/FD/: CMakeLists.txt  main.cpp  tr.cpp
phase_analysis/apps/FD/src/: CMakeLists.txt  mixture_factory.cpp  mixture_factory.h
phase_analysis/apps/gnuplot_templates/: black_palette.gnu
phase_analysis/apps/gnuplot_templates/FD/: FD.gnu
phase_analysis/apps/gnuplot_templates/isotherm/: byP.gnu  byV.gnu
phase_analysis/apps/isotherm/: CMakeLists.txt  main.cpp
phase_analysis/apps/isotherm/src/: CMakeLists.txt  plot_by_P.cpp  plot_by_P.h  plot_by_V.cpp  plot_by_V.h
phase_analysis/libs/: CMakeLists.txt
phase_analysis/libs/cubic_eos/: CMakeLists.txt  PR.cpp  PR.h  RK.cpp  RK.h  SRK.cpp  SRK.h  constants.cpp  constants.h  eos.cpp  eos.h  interface.cpp  interface.h  params.cpp  params.h  solution.h
phase_analysis/libs/cubic_eos/mixture/: CMakeLists.txt  interface.cpp  interface.h
phase_analysis/libs/cubic_equation/: CMakeLists.txt  formulas.cpp  formulas.h  simple.cpp  simple.h  solution.cpp  solution.h  solver.h
phase_analysis/libs/cubic_equation/ut/: CMakeLists.txt  formulas_ut.cpp  solution_ut.cpp  solver_ut.cpp
phase_analysis/libs/mixture/: interface.h
phase_analysis/libs/phase_equilibrium/: CMakeLists.txt  compos.cpp  compos.h  mixture.h  solver.cpp  solver.h  two_phase_compos.cpp  two_phase_compos.h  wilson.cpp  wilson.h
phase_analysis/libs/properties/: pure_substance.h
phase_analysis/libs/utils/: CMakeLists.txt  easy_sort.cpp  easy_sort.h  math.cpp  math.h  sparse.h
phase_analysis/libs/utils/ut/: CMakeLists.txt  easy_sort_ut.cpp  math_ut.cpp  sparse_ut.cpp
